完成目前为止全部的DAO以及其使用的测试 并成功上传下载图片